--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sharyn/cli": "^2.3.1",
     "@sharyn/db": "^1.3.1",
     "@sharyn/env": "^1.0.2",
+    "@sharyn/redis": "^1.0.0",
     "react": "^16.4.1"
   },
   "devDependencies": {
