--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,12 @@ services:
       - '5432:5432'
     networks:
       - sharyn-net
+  db-test:
+    image: postgres:latest
+    ports:
+      - '5433:5432'
+    networks:
+      - sharyn-net
   redis:
     image: redis:latest
     volumes:
