Add sharyn/koa, user, remove note-db.test, add flow-typed

--- a/package.json
+++ b/package.json
@@ -19,10 +19,18 @@
     "extends": "@sharyn"
   },
   "dependencies": {
-    "@sharyn/cli": "^2.5.3",
-    "@sharyn/db": "^1.4.0",
+    "@sharyn/cli": "^2.7.2",
+    "@sharyn/db": "^1.4.1",
     "@sharyn/env": "^1.0.3",
+    "@sharyn/koa": "^1.3.2",
     "@sharyn/redis": "^1.0.1",
+    "koa": "^2.5.2",
+    "koa-compress": "^3.0.0",
+    "koa-favicon": "^2.0.1",
+    "koa-mount": "^3.0.0",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "lodash": "^4.17.10",
     "react": "^16.4.1",
     "uuid": "^3.3.2"
   },
@@ -38,7 +46,7 @@
     "@babel/preset-flow": "^7.0.0-beta.52",
     "@babel/preset-react": "^7.0.0-beta.52",
     "@sharyn/babel-preset": "1.3.1",
-    "@sharyn/eslint-config": "1.1.1",
+    "@sharyn/eslint-config": "1.2.0",
     "@sharyn/prettier-config": "^1.0.3",
     "@sharyn/webpack-config": "1.2.2",
     "babel-core": "7.0.0-bridge.0",
@@ -52,7 +60,6 @@
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-import-resolver-babel-module": "^5.0.0-beta.0",
-    "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.0",
