--- a/.env-sample
+++ b/.env-sample
@@ -1,11 +1,13 @@
 # Everywhere
 DATABASE_URL='postgres://postgres@localhost:5432/postgres'
+TEST_DATABASE_URL='postgres://postgres@localhost:5433/postgres'
 REDIS_URL='redis://localhost:6379'
 SESSION_SECRET_KEY='a very secret string - change this!'
 
 # Local-only
 PORT=8000
-DISABLE_SSL=true
 WDS_PORT=7000
+TESTING_PORT=6000
+DISABLE_SSL=true
 
 # Duplicate this file into an `.env` file containing your real environment variables.
