--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@sharyn/cli": "^2.7.2",
     "@sharyn/db": "^1.4.1",
     "@sharyn/env": "^1.0.3",
-    "@sharyn/koa": "^1.3.2",
+    "@sharyn/koa": "^1.4.0",
     "@sharyn/redis": "^1.0.1",
     "koa": "^2.5.2",
     "koa-compress": "^3.0.0",
@@ -65,13 +65,16 @@
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.10.0",
+    "expect-puppeteer": "^3.2.0",
     "flow-bin": "^0.76.0",
     "husky": "^0.14.3",
     "jest": "^23.3.0",
+    "jest-puppeteer": "^3.2.1",
     "madge": "^3.2.0",
     "nodemon": "^1.18.2",
     "prettier": "^1.13.7",
     "prop-types": "^15.6.2",
+    "puppeteer": "^1.6.0",
     "react-hot-loader": "^4.3.3",
     "rimraf": "^2.6.2",
     "webpack": "^4.1.6",
