Use jest-puppeteer better, a few minor improvements

--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "extends": "@sharyn"
   },
   "dependencies": {
-    "@sharyn/cli": "^2.9.1",
-    "@sharyn/db": "^1.4.1",
-    "@sharyn/env": "^1.0.3",
+    "@babel/polyfill": "^7.0.0-beta.54",
+    "@sharyn/cli": "^2.11.0",
+    "@sharyn/db": "^1.4.2",
+    "@sharyn/env": "^1.1.0",
     "@sharyn/koa": "^1.4.1",
-    "@sharyn/redis": "^1.0.1",
+    "@sharyn/redis": "^1.0.2",
     "koa": "^2.5.2",
     "koa-compress": "^3.0.0",
     "koa-favicon": "^2.0.1",
@@ -45,10 +46,10 @@
     "@babel/preset-env": "^7.0.0-beta.52",
     "@babel/preset-flow": "^7.0.0-beta.52",
     "@babel/preset-react": "^7.0.0-beta.52",
-    "@sharyn/babel-preset": "1.3.1",
-    "@sharyn/eslint-config": "1.2.0",
+    "@sharyn/babel-preset": "1.3.2",
+    "@sharyn/eslint-config": "1.2.1",
     "@sharyn/prettier-config": "^1.0.3",
-    "@sharyn/webpack-config": "1.2.2",
+    "@sharyn/webpack-config": "1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.5",
     "babel-jest": "^23.2.0",
