--- a/.env-sample
+++ b/.env-sample
@@ -1,12 +1,14 @@
-# Everywhere
-DATABASE_URL='postgres://postgres@localhost:5432/postgres'
-TEST_DATABASE_URL='postgres://postgres@localhost:5433/postgres'
-REDIS_URL='redis://localhost:6379'
-SESSION_SECRET_KEY='a very secret string - change this!'
+
+# DATABASE_URL='postgres://postgres@localhost:8432/postgres'
+# TEST_DATABASE_URL='postgres://postgres@localhost:8433/postgres'
+# REDIS_URL='redis://localhost:8379'
+
+# PORT=8020
+# TESTING_PORT=8021
+
+SESSION_SECRET_KEY='a very secret string - change it!'
 
 # Local-only
-PORT=8000
-TESTING_PORT=6000
 DISABLE_SSL=true
 
 # Duplicate this file into an `.env` file containing your real environment variables.
