--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0-beta.54",
-    "@sharyn/cli": "^2.11.0",
-    "@sharyn/db": "^1.4.2",
-    "@sharyn/env": "^1.1.0",
-    "@sharyn/koa": "^1.4.1",
-    "@sharyn/redis": "^1.0.2",
+    "@sharyn/cli": "^2.14.0",
+    "@sharyn/db": "^1.7.0",
+    "@sharyn/env": "^1.4.0",
+    "@sharyn/koa": "^1.8.1",
+    "@sharyn/redis": "^1.2.0",
+    "@sharyn/util": "^1.1.0",
     "koa": "^2.5.2",
     "koa-compress": "^3.0.0",
     "koa-favicon": "^2.0.1",
@@ -32,24 +33,26 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.10",
+    "pg": "^7.4.3",
     "react": "^16.4.1",
+    "redis": "^2.8.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.52",
-    "@babel/core": "^7.0.0-beta.52",
-    "@babel/node": "^7.0.0-beta.52",
+    "@babel/cli": "^7.0.0-beta.54",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/node": "^7.0.0-beta.54",
     "@babel/plugin-proposal-do-expressions": "^7.0.0-beta.54",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-beta.54",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.54",
     "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.52",
-    "@babel/preset-flow": "^7.0.0-beta.52",
-    "@babel/preset-react": "^7.0.0-beta.52",
-    "@sharyn/babel-preset": "1.3.2",
-    "@sharyn/eslint-config": "1.2.1",
-    "@sharyn/prettier-config": "^1.0.3",
-    "@sharyn/webpack-config": "1.3.0",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/preset-flow": "^7.0.0-beta.54",
+    "@babel/preset-react": "^7.0.0-beta.54",
+    "@sharyn/babel-preset": "2.2.0",
+    "@sharyn/eslint-config": "2.1.0",
+    "@sharyn/prettier-config": "^1.1.0",
+    "@sharyn/webpack-config": "1.4.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.5",
     "babel-jest": "^23.2.0",
