--- a/.env-sample
+++ b/.env-sample
@@ -5,10 +5,8 @@
 
 # PORT=8020
 # TESTING_PORT=8021
+# WDS_PORT=8022
 
 SESSION_SECRET_KEY='a very secret string - change it!'
-
-# Local-only
-DISABLE_SSL=true
 
 # Duplicate this file into an `.env` file containing your real environment variables.
