--- a/package.json
+++ b/package.json
@@ -19,70 +19,87 @@
     "extends": "@sharyn"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.54",
-    "@sharyn/cli": "^2.14.0",
-    "@sharyn/db": "^1.7.0",
-    "@sharyn/env": "^1.4.0",
-    "@sharyn/koa": "^1.8.1",
-    "@sharyn/redis": "^1.2.0",
-    "@sharyn/util": "^1.1.0",
+    "@babel/polyfill": "^7.0.0-beta.55",
+    "@sharyn/cli": "^3.0.0",
+    "@sharyn/client": "^1.1.1",
+    "@sharyn/components": "^1.2.3",
+    "@sharyn/db": "^1.8.1",
+    "@sharyn/env": "^1.8.1",
+    "@sharyn/hocs": "^1.0.1",
+    "@sharyn/koa": "^1.11.1",
+    "@sharyn/redis": "^1.3.1",
+    "@sharyn/server": "^1.2.1",
+    "@sharyn/shared": "^1.6.2",
+    "@sharyn/util": "^1.2.1",
+    "@sharyn/webpack-config": "1.7.1",
     "koa": "^2.5.2",
     "koa-compress": "^3.0.0",
     "koa-favicon": "^2.0.1",
     "koa-mount": "^3.0.0",
     "koa-router": "^7.4.0",
+    "koa-sslify": "^2.1.2",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.10",
     "pg": "^7.4.3",
+    "raven-js": "^3.26.4",
     "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
+    "react-hot-loader": "^4.3.4",
+    "react-jss": "^8.6.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "recompose": "^0.28.0",
     "redis": "^2.8.0",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.6.1",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.54",
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/node": "^7.0.0-beta.54",
-    "@babel/plugin-proposal-do-expressions": "^7.0.0-beta.54",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-beta.54",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.54",
-    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "@babel/preset-flow": "^7.0.0-beta.54",
-    "@babel/preset-react": "^7.0.0-beta.54",
-    "@sharyn/babel-preset": "2.2.0",
-    "@sharyn/eslint-config": "2.1.0",
-    "@sharyn/prettier-config": "^1.1.0",
-    "@sharyn/webpack-config": "1.4.0",
+    "@babel/cli": "^7.0.0-beta.55",
+    "@babel/core": "^7.0.0-beta.55",
+    "@babel/node": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.55",
+    "@babel/preset-env": "^7.0.0-beta.55",
+    "@babel/preset-flow": "^7.0.0-beta.55",
+    "@babel/preset-react": "^7.0.0-beta.55",
+    "@sharyn/babel-preset": "2.3.1",
+    "@sharyn/eslint-config": "2.2.1",
+    "@sharyn/jest-config": "1.0.0",
+    "@sharyn/prettier-config": "^1.2.1",
+    "@sharyn/testing": "^1.1.1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^8.2.5",
-    "babel-jest": "^23.2.0",
+    "babel-eslint": "^9.0.0-beta.3",
+    "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0-beta.4",
-    "babel-plugin-flow-react-proptypes": "^24.0.1",
+    "babel-plugin-flow-react-proptypes": "^24.1.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "cross-env": "^5.2.0",
-    "eslint": "^5.1.0",
+    "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-import-resolver-babel-module": "^5.0.0-beta.0",
     "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.10.0",
-    "expect-puppeteer": "^3.2.0",
-    "flow-bin": "^0.76.0",
+    "flow-bin": "^0.77.0",
     "husky": "^0.14.3",
-    "jest": "^23.3.0",
+    "jest": "^23.4.2",
     "jest-puppeteer": "^3.2.1",
-    "madge": "^3.2.0",
-    "nodemon": "^1.18.2",
-    "prettier": "^1.13.7",
+    "nodemon": "^1.18.3",
+    "prettier": "^1.14.0",
     "prop-types": "^15.6.2",
-    "puppeteer": "^1.6.0",
-    "react-hot-loader": "^4.3.3",
+    "puppeteer": "^1.6.1",
     "rimraf": "^2.6.2",
-    "webpack": "^4.1.6",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   }
 }
