--- a/.flowconfig
+++ b/.flowconfig
@@ -4,6 +4,8 @@ suppress_comment= \\(.\\|\n\\)*\\flow-disable-next-line
 module.system.node.resolve_dirname=node_modules
 module.system.node.resolve_dirname=src
 
+esproposal.optional_chaining=enable
+
 [ignore]
 .*/node_modules/config-chain/.*
 .*/node_modules/graphviz/.*
