Add missing page files, rename component files, Sign Up and Log In pages

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@sharyn/cli": "^3.0.0",
     "@sharyn/client": "^1.1.1",
     "@sharyn/components": "^1.2.3",
-    "@sharyn/db": "^1.8.2",
+    "@sharyn/db": "^1.8.3",
     "@sharyn/env": "^1.8.1",
     "@sharyn/hocs": "^1.0.1",
     "@sharyn/koa": "^1.11.1",
@@ -34,6 +34,9 @@
     "@sharyn/shared": "^1.6.2",
     "@sharyn/util": "^1.2.1",
     "@sharyn/webpack-config": "1.7.1",
+    "bcrypt": "^3.0.0",
+    "jss": "^9.8.7",
+    "jss-preset-default": "^4.5.0",
     "koa": "^2.5.2",
     "koa-compress": "^3.0.0",
     "koa-favicon": "^2.0.1",
