Add no-ssr support, NavList

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "scripts": {
     "start": "sharyn dev",
-    "dev-ssr-only": "sharyn dev-ssr-only",
-    "dev-no-ssr": "sharyn dev-no-ssr",
+    "ssr-only": "sharyn dev-ssr-only",
+    "no-ssr": "sharyn dev-no-ssr",
     "local-prod": "sharyn local-prod",
     "lint": "sharyn lint",
     "test": "sharyn test",
@@ -24,7 +24,7 @@
     "@material-ui/icons": "^2.0.0",
     "@sharyn/cli": "^3.0.0",
     "@sharyn/client": "^1.1.1",
-    "@sharyn/components": "^1.2.3",
+    "@sharyn/components": "^1.3.0",
     "@sharyn/db": "^1.8.3",
     "@sharyn/env": "^1.8.1",
     "@sharyn/hocs": "^1.0.1",
