--- a/.flowconfig
+++ b/.flowconfig
@@ -7,6 +7,8 @@ module.system.node.resolve_dirname=src
 esproposal.optional_chaining=enable
 
 [ignore]
+.*/node_modules/@sharyn/koa/.*
+.*/node_modules/@sharyn/redis/.*
 .*/node_modules/config-chain/.*
 .*/node_modules/graphviz/.*
 .*/node_modules/jss/.*
