--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "local-prod": "sharyn local-prod",
     "lint": "sharyn lint",
     "test": "sharyn test",
+    "stats": "sharyn stats",
     "heroku-postbuild": "sharyn build-prod"
   },
   "babel": {
@@ -26,7 +27,7 @@
     "@babel/polyfill": "^7.0.0-beta.55",
     "@material-ui/core": "^1.4.2",
     "@material-ui/icons": "^2.0.0",
-    "@sharyn/cli": "^3.0.0",
+    "@sharyn/cli": "^3.1.1",
     "@sharyn/client": "^1.1.1",
     "@sharyn/components": "^1.3.0",
     "@sharyn/db": "^1.8.3",
@@ -34,10 +35,9 @@
     "@sharyn/hocs": "^1.0.1",
     "@sharyn/koa": "^1.12.0",
     "@sharyn/redis": "^1.3.1",
-    "@sharyn/server": "^2.6.0",
+    "@sharyn/server": "^2.7.0",
     "@sharyn/shared": "^1.6.2",
     "@sharyn/util": "^1.2.1",
-    "@sharyn/webpack-config": "1.7.1",
     "bcrypt": "^3.0.0",
     "jss": "^9.8.7",
     "jss-preset-default": "^4.5.0",
@@ -77,17 +77,19 @@
     "@babel/preset-env": "^7.0.0-beta.55",
     "@babel/preset-flow": "^7.0.0-beta.55",
     "@babel/preset-react": "^7.0.0-beta.55",
-    "@sharyn/babel-preset": "2.3.1",
+    "@sharyn/babel-preset": "2.5.0",
     "@sharyn/eslint-config": "2.2.1",
     "@sharyn/jest-config": "1.0.0",
     "@sharyn/prettier-config": "^1.2.1",
     "@sharyn/testing": "^1.1.1",
+    "@sharyn/webpack-config": "1.9.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^9.0.0-beta.3",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0-beta.4",
     "babel-plugin-flow-react-proptypes": "^24.1.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.2.0",
     "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
