--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "babel": {
     "presets": [
-      "@sharyn"
+      "sharyn"
     ]
   },
   "eslintConfig": {
-    "extends": "@sharyn"
+    "extends": "sharyn"
   },
   "husky": {
     "hooks": {
@@ -24,20 +24,9 @@
     }
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.55",
+    "@babel/polyfill": "^7.0.0-beta.56",
     "@material-ui/core": "^1.4.2",
     "@material-ui/icons": "^2.0.0",
-    "@sharyn/cli": "^3.1.1",
-    "@sharyn/client": "^1.1.1",
-    "@sharyn/components": "^1.3.0",
-    "@sharyn/db": "^1.8.3",
-    "@sharyn/env": "^1.8.1",
-    "@sharyn/hocs": "^1.0.1",
-    "@sharyn/koa": "^1.12.0",
-    "@sharyn/redis": "^1.3.1",
-    "@sharyn/server": "^2.7.0",
-    "@sharyn/shared": "^1.6.2",
-    "@sharyn/util": "^1.2.1",
     "bcrypt": "^3.0.0",
     "jss": "^9.8.7",
     "jss-preset-default": "^4.5.0",
@@ -64,25 +53,20 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
     "redux-thunk": "^2.3.0",
+    "sharyn": "^2.1.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.55",
-    "@babel/core": "^7.0.0-beta.55",
-    "@babel/node": "^7.0.0-beta.55",
-    "@babel/plugin-proposal-do-expressions": "^7.0.0-beta.55",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-beta.55",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.55",
-    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.55",
-    "@babel/preset-env": "^7.0.0-beta.55",
-    "@babel/preset-flow": "^7.0.0-beta.55",
-    "@babel/preset-react": "^7.0.0-beta.55",
-    "@sharyn/babel-preset": "2.5.0",
-    "@sharyn/eslint-config": "2.2.1",
-    "@sharyn/jest-config": "1.0.0",
-    "@sharyn/prettier-config": "^1.2.1",
-    "@sharyn/testing": "^1.1.1",
-    "@sharyn/webpack-config": "1.9.0",
+    "@babel/cli": "^7.0.0-beta.56",
+    "@babel/core": "^7.0.0-beta.56",
+    "@babel/node": "^7.0.0-beta.56",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0-beta.56",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-beta.56",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.56",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.56",
+    "@babel/preset-env": "^7.0.0-beta.56",
+    "@babel/preset-flow": "^7.0.0-beta.56",
+    "@babel/preset-react": "^7.0.0-beta.56",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^9.0.0-beta.3",
     "babel-jest": "^23.4.2",
