--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "jss": "^9.8.7",
     "jss-preset-default": "^4.5.0",
     "koa": "^2.5.2",
+    "koa-body": "^4.0.4",
     "koa-compress": "^3.0.0",
     "koa-favicon": "^2.0.1",
     "koa-mount": "^3.0.0",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.8.2",
     "koa-sslify": "^2.1.2",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.10",
@@ -53,7 +55,7 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
     "redux-thunk": "^2.3.0",
-    "sharyn": "^2.1.1",
+    "sharyn": "^2.4.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
