--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     }
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.56",
-    "@material-ui/core": "^1.4.2",
-    "@material-ui/icons": "^2.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@material-ui/core": "^3.0.3",
+    "@material-ui/icons": "^3.0.1",
     "bcrypt": "^3.0.0",
     "jss": "^9.8.7",
     "jss-preset-default": "^4.5.0",
@@ -36,67 +36,67 @@
     "koa-favicon": "^2.0.1",
     "koa-mount": "^3.0.0",
     "koa-router": "^7.4.0",
-    "koa-session": "^5.8.2",
+    "koa-session": "^5.9.0",
     "koa-sslify": "^2.1.2",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.10",
     "pg": "^7.4.3",
-    "raven-js": "^3.26.4",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "raven-js": "^3.27.0",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
     "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.3.4",
+    "react-hot-loader": "^4.3.6",
     "react-jss": "^8.6.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "recompose": "^0.28.0",
+    "recompose": "^0.30.0",
     "redis": "^2.8.0",
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
     "redux-thunk": "^2.3.0",
-    "sharyn": "^2.6.0",
+    "sharyn": "^3.3.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.56",
-    "@babel/core": "^7.0.0-beta.56",
-    "@babel/node": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-do-expressions": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.56",
-    "@babel/preset-env": "^7.0.0-beta.56",
-    "@babel/preset-flow": "^7.0.0-beta.56",
-    "@babel/preset-react": "^7.0.0-beta.56",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^9.0.0-beta.3",
+    "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
-    "babel-loader": "^8.0.0-beta.4",
-    "babel-plugin-flow-react-proptypes": "^24.1.0",
+    "babel-loader": "^8.0.2",
+    "babel-plugin-flow-react-proptypes": "^24.1.2",
     "babel-plugin-module-resolver": "^3.1.1",
-    "compression-webpack-plugin": "^1.1.11",
+    "compression-webpack-plugin": "^2.0.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.2.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-import-resolver-babel-module": "^5.0.0-beta.0",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-import-resolver-babel-module": "^5.0.0-beta.1",
     "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.10.0",
-    "flow-bin": "^0.77.0",
+    "eslint-plugin-react": "^7.11.1",
+    "flow-bin": "^0.80.0",
     "husky": "^1.0.0-rc.13",
-    "jest": "^23.4.2",
-    "jest-puppeteer": "^3.2.1",
-    "nodemon": "^1.18.3",
-    "prettier": "^1.14.0",
+    "jest": "^23.5.0",
+    "jest-puppeteer": "^3.3.1",
+    "nodemon": "^1.18.4",
+    "prettier": "^1.14.2",
     "prop-types": "^15.6.2",
-    "puppeteer": "^1.6.1",
+    "puppeteer": "^1.8.0",
     "rimraf": "^2.6.2",
-    "webpack": "^4.16.3",
+    "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.1.8"
   }
 }
