--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@babel/polyfill": "^7.0.0",
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
+    "apollo-server-koa": "^2.0.6",
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
+    "graphql": "^14.0.2",
     "jss": "^9.8.7",
     "jss-preset-default": "^4.5.0",
     "koa": "^2.5.2",
@@ -55,7 +58,7 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
     "redux-thunk": "^2.3.0",
-    "sharyn": "^3.3.3",
+    "sharyn": "^3.5.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
