Use sharyn 4.2.1, add Storybook

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "sharyn lint",
     "test": "sharyn test",
     "stats": "sharyn stats",
-    "heroku-postbuild": "sharyn build-prod"
+    "heroku-postbuild": "sharyn build-prod",
+    "story": "start-storybook -p 8025",
+    "build-story": "build-storybook -o public/storybook"
   },
   "babel": {
     "presets": [
@@ -20,20 +22,20 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "sharyn lint-test"
+      "pre-commit": "sharyn lint-test && yarn build-story && git add public/storybook"
     }
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
-    "apollo-server-koa": "^2.0.6",
+    "apollo-server-koa": "^2.0.7",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "graphql": "^14.0.2",
     "jss": "^9.8.7",
     "jss-preset-default": "^4.5.0",
-    "koa": "^2.5.2",
+    "koa": "^2.5.3",
     "koa-body": "^4.0.4",
     "koa-compress": "^3.0.0",
     "koa-favicon": "^2.0.1",
@@ -42,13 +44,13 @@
     "koa-session": "^5.9.0",
     "koa-sslify": "^2.1.2",
     "koa-static": "^5.0.0",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "pg": "^7.4.3",
     "raven-js": "^3.27.0",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.3.6",
+    "react-hot-loader": "^4.3.8",
     "react-jss": "^8.6.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
@@ -58,7 +60,7 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
     "redux-thunk": "^2.3.0",
-    "sharyn": "^3.11.2",
+    "sharyn": "^4.2.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -67,20 +69,26 @@
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-do-expressions": "^7.0.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-optional-catch-binding": "^7.0.0",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-backgrounds": "^4.0.0-alpha.21",
+    "@storybook/addon-knobs": "^4.0.0-alpha.21",
+    "@storybook/addon-viewport": "^4.0.0-alpha.21",
+    "@storybook/addons": "^4.0.0-alpha.21",
+    "@storybook/react": "^4.0.0-alpha.21",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
     "babel-plugin-flow-react-proptypes": "^24.1.2",
     "babel-plugin-module-resolver": "^3.1.1",
     "compression-webpack-plugin": "^2.0.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.5.0",
+    "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-import-resolver-babel-module": "^5.0.0-beta.1",
@@ -89,16 +97,18 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
-    "flow-bin": "^0.80.0",
-    "husky": "^1.0.0-rc.13",
-    "jest": "^23.5.0",
+    "flow-bin": "^0.81.0",
+    "husky": "^1.0.0-rc.14",
+    "jest": "^23.6.0",
     "jest-puppeteer": "^3.3.1",
     "nodemon": "^1.18.4",
     "prettier": "^1.14.2",
     "prop-types": "^15.6.2",
     "puppeteer": "^1.8.0",
     "rimraf": "^2.6.2",
-    "webpack": "^4.17.2",
+    "storybook-addon-material-ui": "^0.9.0-alpha.15",
+    "storybook-host": "^5.0.0",
+    "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
   }
