--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "apollo-server-koa": "^2.0.7",
     "bcrypt": "^3.0.0",
     "graphql": "^14.0.2",
+    "joi": "^13.6.0",
     "jss": "^9.8.7",
     "jss-preset-default": "^4.5.0",
     "koa": "^2.5.3",
