Fix updateNote API and call

--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "@material-ui/core": "^3.0.3",
+    "@material-ui/core": "^3.1.0",
     "@material-ui/icons": "^3.0.1",
-    "apollo-server-koa": "^2.0.7",
-    "bcrypt": "^3.0.0",
+    "apollo-server-koa": "^2.1.0",
+    "bcrypt": "^3.0.1",
     "graphql": "^14.0.2",
     "joi": "^13.6.0",
     "joi-browser": "^13.4.0",
@@ -51,10 +51,10 @@
     "lodash": "^4.17.11",
     "pg": "^7.4.3",
     "raven-js": "^3.27.0",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.3.8",
+    "react-hot-loader": "^4.3.11",
     "react-jss": "^8.6.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
@@ -64,26 +64,26 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
     "redux-thunk": "^2.3.0",
-    "sharyn": "^4.20.1",
+    "sharyn": "^4.21.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.1.0",
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-do-expressions": "^7.0.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
     "@babel/plugin-proposal-optional-catch-binding": "^7.0.0",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-backgrounds": "^4.0.0-alpha.21",
-    "@storybook/addon-knobs": "^4.0.0-alpha.21",
-    "@storybook/addon-viewport": "^4.0.0-alpha.21",
-    "@storybook/addons": "^4.0.0-alpha.21",
-    "@storybook/react": "^4.0.0-alpha.21",
+    "@storybook/addon-backgrounds": "^4.0.0-alpha.22",
+    "@storybook/addon-knobs": "^4.0.0-alpha.22",
+    "@storybook/addon-viewport": "^4.0.0-alpha.22",
+    "@storybook/addons": "^4.0.0-alpha.22",
+    "@storybook/react": "^4.0.0-alpha.22",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.6.0",
@@ -96,7 +96,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-import-resolver-babel-module": "^5.0.0-beta.1",
-    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-flowtype": "^2.50.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
@@ -105,14 +105,14 @@
     "husky": "^1.0.0-rc.14",
     "jest": "^23.6.0",
     "jest-puppeteer": "^3.3.1",
+    "moment": "^2.22.2",
     "nodemon": "^1.18.4",
-    "prettier": "^1.14.2",
+    "prettier": "^1.14.3",
     "prop-types": "^15.6.2",
     "puppeteer": "^1.8.0",
     "rimraf": "^2.6.2",
-    "storybook-addon-material-ui": "^0.9.0-alpha.15",
-    "storybook-host": "^5.0.0",
-    "webpack": "^4.19.0",
+    "storybook-addon-material-ui": "^0.9.0-alpha.16",
+    "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
   }
