User menu, toggle for SW, better Nav

--- a/.env-sample
+++ b/.env-sample
@@ -7,6 +7,7 @@
 # TESTING_PORT=8021
 # WDS_PORT=8022
 # VISUAL_PUPPETEER=1
+# TURN_OFF_SW=1
 
 SESSION_SECRET_KEY='a very secret string - change it!'
 
