--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "sharyn dev",
@@ -64,7 +65,7 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
     "redux-thunk": "^2.3.0",
-    "sharyn": "^4.28.1",
+    "sharyn": "^4.29.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
