--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,3 @@
-
 # DATABASE_URL='postgres://postgres@localhost:8432/postgres'
 # TEST_DATABASE_URL='postgres://postgres@localhost:8433/postgres'
 # REDIS_URL='redis://localhost:8379'
@@ -6,8 +5,10 @@
 # PORT=8020
 # TESTING_PORT=8021
 # WDS_PORT=8022
+
 # VISUAL_PUPPETEER=1
-# TURN_OFF_SW=1
+TURN_OFF_SW=1
+NO_VERSION_VALIDATION=1
 
 SESSION_SECRET_KEY='a very secret string - change it!'
 
