--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "stats": "sharyn stats",
     "heroku-postbuild": "sharyn build-prod",
     "story": "start-storybook -p 8025",
-    "build-story": "build-storybook -o public/storybook"
+    "build-story": "build-storybook -o public/storybook",
+    "deploy": "git push origin master && git push heroku master",
+    "deploy-prod": "git push origin master && git push heroku master && heroku pipelines:promote -a sharyn-boilerplate-staging"
   },
   "engines": {
     "node": ">=10.10.0"
@@ -62,9 +64,8 @@
     "recompose": "^0.30.0",
     "redis": "^2.8.0",
     "redux": "^4.0.0",
-    "redux-actions": "^2.6.1",
     "redux-thunk": "^2.3.0",
-    "sharyn": "^4.35.1",
+    "sharyn": "^5.0.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
