Try deployment sound

--- a/.env-sample
+++ b/.env-sample
@@ -9,6 +9,7 @@
 # VISUAL_PUPPETEER=1
 TURN_OFF_SW=1
 NO_VERSION_VALIDATION=1
+HEROKU_DEPLOYMENT_SOUND=1
 
 SESSION_SECRET_KEY='a very secret string - change it!'
 
