--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lint": "sharyn lint",
     "test": "sharyn test",
     "stats": "sharyn stats",
-    "story": "start-storybook -p 8025",
-    "build-story": "build-storybook -o public/storybook",
+    "story": "sharyn storybook",
     "heroku-postbuild": "sharyn build-prod",
     "deploy-staging": "sharyn deploy-staging",
     "promote": "sharyn promote",
@@ -28,7 +27,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "sharyn lint-test && yarn build-story && git add public/storybook"
+      "pre-commit": "sharyn lint-test-storybook"
     }
   },
   "dependencies": {
@@ -66,7 +65,7 @@
     "redis": "^2.8.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "sharyn": "^5.4.0",
+    "sharyn": "^5.5.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
