Use new AppWithProviders and renderPage

--- a/package.json
+++ b/package.json
@@ -39,8 +39,6 @@
     "graphql": "^14.0.2",
     "joi": "^13.6.0",
     "joi-browser": "^13.4.0",
-    "jss": "^9.8.7",
-    "jss-preset-default": "^4.5.0",
     "koa": "^2.5.3",
     "koa-body": "^4.0.4",
     "koa-compress": "^3.0.0",
@@ -56,14 +54,12 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.3.11",
-    "react-jss": "^8.6.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "recompose": "^0.30.0",
     "redis": "^2.8.0",
-    "sharyn": "^5.13.4",
+    "sharyn": "^5.14.0-alpha.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
