--- a/package.json
+++ b/package.json
@@ -54,12 +54,13 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
+    "react-hot-loader": "^4.3.11",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "recompose": "^0.30.0",
     "redis": "^2.8.0",
-    "sharyn": "^5.20.3",
+    "sharyn": "^5.21.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
